--- a/index.html
+++ b/index.html
@@ -4,77 +4,65 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CráneoClave | AI Stroke Triage</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f6f8;
-    }
-    header {
-      background: #2c3e50;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background: #34495e;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    section {
-      background: white;
-      border-radius: 8px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    button, select {
-      padding: 10px;
-      font-size: 16px;
-      margin-top: 10px;
+      background-color: #f8f9fa;
     }
     #timer {
-      font-size: 18px;
+      font-size: 1.1rem;
       font-weight: bold;
-      color: red;
-      margin-top: 10px;
+      color: #e74c3c;
+      margin-left: 10px;
     }
   </style>
 </head>
 <body onload="startTimer()">
-  <header>
-    <h1 id="title">CráneoClave – NeuroPass</h1>
-    <p id="subtitle">AI-Guided Stroke Triage & Referral Tool</p>
-    <div id="timer">Timer: 00:00</div>
-  </header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="education.html">Education</a>
-    <a href="timer.html">Timer</a>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">🧠 CráneoClave</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="education.html">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="timer.html">Timer</a>
+          </li>
+        </ul>
+        <div class="d-flex align-items-center">
+          <span id="timer">Timer: 00:00</span>
+        </div>
+      </div>
+    </div>
   </nav>
 
-  <main>
-    <!-- Existing content preserved here -->
-    <!-- Sections like language selector, checklist, scan, map, education, etc. -->
-  </main>
+  <!-- Main Content -->
+  <div class="container mt-4">
+    <div class="card p-4">
+      <h2>Select Your Language</h2>
+      <select id="languageSelect" class="form-select w-auto" onchange="switchLanguage()">
+        <option value="en">🇺🇸 English</option>
+        <option value="es">🇪🇸 Español</option>
+        <option value="pt">🇵🇹 Português</option>
+        <option value="qu">🇧🇴 Quechua</option>
+        <option value="gn">🇵🇾 Guaraní</option>
+      </select>
+    </div>
+  </div>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Timer + Language Logic -->
   <script>
     let timerSeconds = 0;
     let language = "en";
@@ -82,23 +70,11 @@
     const translations = {
       en: {
         title: "CráneoClave – NeuroPass",
-        subtitle: "AI-Guided Stroke Triage & Referral Tool",
-        checklistTitle: "Stroke Symptom Checklist",
-        face: "Facial droop",
-        arm: "Arm weakness",
-        speech: "Slurred speech",
-        vision: "Vision changes",
-        time: "Sudden onset"
+        subtitle: "AI-Guided Stroke Triage & Referral Tool"
       },
       es: {
         title: "CráneoClave – NeuroPass",
-        subtitle: "Herramienta de Triaje de ACV con IA",
-        checklistTitle: "Lista de Síntomas de ACV",
-        face: "Parálisis facial",
-        arm: "Debilidad en el brazo",
-        speech: "Habla arrastrada",
-        vision: "Cambios en la visión",
-        time: "Inicio repentino"
+        subtitle: "Herramienta de Triaje de ACV con IA"
       }
     };
 
@@ -114,36 +90,7 @@
     function switchLanguage() {
       language = document.getElementById("languageSelect").value;
       const t = translations[language] || translations.en;
-      document.getElementById("title").textContent = t.title;
-      document.getElementById("subtitle").textContent = t.subtitle;
-      document.getElementById("checklistTitle").textContent = t.checklistTitle;
-      document.querySelectorAll('[data-key]').forEach(el => {
-        el.textContent = t[el.dataset.key];
-      });
-      document.getElementById("languageSection").style.display = "none";
-      document.getElementById("checklistSection").style.display = "block";
-    }
-
-    function speakChecklist() {
-      const synth = window.speechSynthesis;
-      const checklistItems = document.querySelectorAll('[data-key]');
-      let text = [...checklistItems].map(el => el.textContent).join(", ");
-      const utter = new SpeechSynthesisUtterance(text);
-      utter.lang = language;
-      synth.speak(utter);
-    }
-
-    function evaluateChecklist() {
-      const symptoms = document.querySelectorAll('input[name="symptom"]:checked');
-      if (symptoms.length >= 3) {
-        alert("Stroke likely. Proceed to pupil scan.");
-        document.getElementById("checklistSection").style.display = "none";
-        document.getElementById("scanSection").style.display = "block";
-        document.getElementById("mapSection").style.display = "block";
-        document.getElementById("educationSection").style.display = "block";
-      } else {
-        alert("Symptoms may not meet stroke threshold. Continue monitoring.");
-      }
+      document.title = t.title;
     }
   </script>
 </body>
