--- a/timer.html
+++ b/timer.html
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Live Timer - CráneoClave</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CranéoClave | Live Stroke Timer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      text-align: center;
+      background-color: #f9f9f9;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    header, nav {
-      background: #2c3e50;
-      color: white;
-      padding: 15px;
-    }
-    nav a {
-      margin: 0 15px;
-      color: white;
-      text-decoration: none;
+    .timer-display {
+      font-size: 3rem;
       font-weight: bold;
+      color: #dc3545;
     }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 40px 20px;
-    }
-    #liveTimer {
-      font-size: 48px;
-      font-weight: bold;
-      color: #e74c3c;
-      margin-top: 40px;
+    .subtext {
+      font-size: 1.2rem;
+      margin-top: 10px;
     }
   </style>
 </head>
-<body onload="startLiveTimer()">
-  <header>
-    <h1>Timer – CráneoClave</h1>
-  </header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="education.html">Education</a>
-    <a href="timer.html">Timer</a>
+<body onload="startTimer()">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">🧠 CráneoClave</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="education.html">Education</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="timer.html">Timer</a>
+          </li>
+        </ul>
+        <span class="navbar-text text-white" id="navbarTimer">Timer: 00:00</span>
+      </div>
+    </div>
   </nav>
-  <main>
-    <p>This timer tracks how long it's been since the stroke triage process began.</p>
-    <div id="liveTimer">00:00</div>
-  </main>
+
+  <div class="container text-center mt-5">
+    <h1 class="mb-4">⏱️ Stroke Onset Timer</h1>
+    <div class="timer-display" id="mainTimer">00:00</div>
+    <p class="subtext">This timer began when the application launched. Use it to track time since symptom onset.</p>
+    <button class="btn btn-outline-danger mt-3" onclick="resetTimer()">🔄 Reset Timer</button>
+  </div>
 
   <script>
-    let seconds = 0;
-    function startLiveTimer() {
-      setInterval(() => {
-        seconds++;
-        const mins = String(Math.floor(seconds / 60)).padStart(2, '0');
-        const secs = String(seconds % 60).padStart(2, '0');
-        document.getElementById("liveTimer").textContent = `${mins}:${secs}`;
+    let secondsElapsed = 0;
+    let timerInterval;
+
+    function startTimer() {
+      timerInterval = setInterval(() => {
+        secondsElapsed++;
+        const mins = String(Math.floor(secondsElapsed / 60)).padStart(2, '0');
+        const secs = String(secondsElapsed % 60).padStart(2, '0');
+        document.getElementById("mainTimer").textContent = `${mins}:${secs}`;
+        document.getElementById("navbarTimer").textContent = `Timer: ${mins}:${secs}`;
       }, 1000);
     }
+
+    function resetTimer() {
+      clearInterval(timerInterval);
+      secondsElapsed = 0;
+      startTimer();
+    }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
