--- a/timer.html
+++ b/timer.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CranéoClave | Live Stroke Timer</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CráneoClave | Stroke Timer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      background-color: #f9f9f9;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to bottom right, #e9f5ff, #fefefe);
     }
-    .timer-display {
-      font-size: 3rem;
+    #timerDisplay {
+      font-size: 2rem;
       font-weight: bold;
       color: #dc3545;
     }
-    .subtext {
+    .language-flag {
       font-size: 1.2rem;
-      margin-top: 10px;
     }
   </style>
 </head>
 <body onload="startTimer()">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">🧠 CráneoClave</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="#">🧠 CráneoClave</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,39 +36,59 @@
             <a class="nav-link" href="education.html">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="timer.html">Timer</a>
+            <a class="nav-link active" href="timer.html">Timer</a>
           </li>
         </ul>
-        <span class="navbar-text text-white" id="navbarTimer">Timer: 00:00</span>
+        <form class="d-flex">
+          <select id="languageSelect" class="form-select" onchange="setLanguage()">
+            <option value="es">🇪🇸 Español</option>
+            <option value="pt">🇵🇹 Português</option>
+            <option value="qu">🇧🇴 Quechua</option>
+            <option value="gn">🇵🇾 Guaraní</option>
+            <option value="en">🇺🇸 English</option>
+            <option value="fr">🇫🇷 Français</option>
+            <option value="de">🇩🇪 Deutsch</option>
+            <option value="zh">🇨🇳 中文</option>
+            <option value="ar">🇸🇦 العربية</option>
+            <option value="ru">🇷🇺 Русский</option>
+            <option value="hi">🇮🇳 हिंदी</option>
+          </select>
+        </form>
       </div>
     </div>
   </nav>
 
   <div class="container text-center mt-5">
-    <h1 class="mb-4">⏱️ Stroke Onset Timer</h1>
-    <div class="timer-display" id="mainTimer">00:00</div>
-    <p class="subtext">This timer began when the application launched. Use it to track time since symptom onset.</p>
-    <button class="btn btn-outline-danger mt-3" onclick="resetTimer()">🔄 Reset Timer</button>
+    <h1 class="mb-4">⏱️ Stroke Response Timer</h1>
+    <p class="lead">Time matters. The brain is losing cells every second.</p>
+    <div id="timerDisplay" class="my-3">00:00</div>
+    <button class="btn btn-danger btn-lg" onclick="resetTimer()">🔁 Reset Timer</button>
   </div>
 
   <script>
     let secondsElapsed = 0;
-    let timerInterval;
+    let intervalId;
 
     function startTimer() {
-      timerInterval = setInterval(() => {
+      intervalId = setInterval(() => {
         secondsElapsed++;
-        const mins = String(Math.floor(secondsElapsed / 60)).padStart(2, '0');
-        const secs = String(secondsElapsed % 60).padStart(2, '0');
-        document.getElementById("mainTimer").textContent = `${mins}:${secs}`;
-        document.getElementById("navbarTimer").textContent = `Timer: ${mins}:${secs}`;
+        let mins = String(Math.floor(secondsElapsed / 60)).padStart(2, '0');
+        let secs = String(secondsElapsed % 60).padStart(2, '0');
+        document.getElementById('timerDisplay').textContent = `${mins}:${secs}`;
       }, 1000);
     }
 
     function resetTimer() {
-      clearInterval(timerInterval);
+      clearInterval(intervalId);
       secondsElapsed = 0;
+      document.getElementById('timerDisplay').textContent = '00:00';
       startTimer();
+    }
+
+    function setLanguage() {
+      const lang = document.getElementById("languageSelect").value;
+      alert("Language set to: " + lang);
+      // You can insert logic here to load language-specific content later.
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
