--- a/index.html
+++ b/index.html
@@ -3,33 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CráneoClave | AI Stroke Triage</title>
+  <title>CráneoClave | Stroke Triage</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
+      font-family: 'Inter', sans-serif;
+      background-color: #f4f6f8;
     }
-    #timer {
-      font-size: 1.1rem;
+    .hero-section {
+      background: linear-gradient(to right, #004085, #007bff);
+      color: white;
+      padding: 4rem 1rem;
+      text-align: center;
+      border-radius: 0 0 1rem 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+    .hero-section h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+    }
+    .hero-section p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+    .main-content {
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .nav-link.active {
       font-weight: bold;
-      color: #e74c3c;
-      margin-left: 10px;
+      border-bottom: 2px solid white;
     }
-    .card + .card {
-      margin-top: 1rem;
+    .language-select {
+      max-width: 250px;
     }
   </style>
 </head>
-<body onload="startTimer()">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">🧠 CráneoClave</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand fw-bold" href="#">🧠 CráneoClave</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" href="index.html">Home</a>
           </li>
@@ -40,148 +58,56 @@
             <a class="nav-link" href="timer.html">Timer</a>
           </li>
         </ul>
-        <div class="d-flex align-items-center">
-          <span id="timer">Timer: 00:00</span>
-        </div>
+        <form class="d-flex">
+          <select id="languageSelect" class="form-select language-select" onchange="setLanguage()">
+            <option value="es">🇪🇸 Español</option>
+            <option value="pt">🇧🇷 Português</option>
+            <option value="qu">🇧🇴 Quechua</option>
+            <option value="gn">🇵🇾 Guaraní</option>
+            <option value="en">🇺🇸 English</option>
+            <option value="fr">🇫🇷 Français</option>
+            <option value="de">🇩🇪 Deutsch</option>
+            <option value="zh">🇨🇳 中文</option>
+            <option value="ar">🇸🇦 العربية</option>
+            <option value="ru">🇷🇺 Русский</option>
+            <option value="hi">🇮🇳 हिंदी</option>
+            <option value="ja">🇯🇵 日本語</option>
+            <option value="it">🇮🇹 Italiano</option>
+            <option value="sw">🇰🇪 Kiswahili</option>
+            <option value="ta">🇮🇳 தமிழ்</option>
+            <option value="bn">🇧🇩 বাংলা</option>
+            <option value="ko">🇰🇷 한국어</option>
+            <option value="tr">🇹🇷 Türkçe</option>
+            <option value="vi">🇻🇳 Tiếng Việt</option>
+            <option value="pl">🇵🇱 Polski</option>
+            <option value="th">🇹🇭 ภาษาไทย</option>
+            <option value="nl">🇳🇱 Nederlands</option>
+            <option value="fa">🇮🇷 فارسی</option>
+            <option value="uk">🇺🇦 Українська</option>
+          </select>
+        </form>
       </div>
     </div>
   </nav>
 
-  <div class="container mt-4">
-    <div class="card p-4">
-      <h4 class="mb-3">🌍 Select Your Language</h4>
-      <select id="languageSelect" class="form-select w-auto" onchange="switchLanguage()">
-        <option value="en">🇺🇸 English</option>
-        <option value="es">🇪🇸 Español</option>
-        <option value="pt">🇵🇹 Português</option>
-        <option value="qu">🇧🇴 Quechua</option>
-        <option value="gn">🇵🇾 Guaraní</option>
-      </select>
-    </div>
-
-    <div id="checklistSection" class="card p-4 mt-4" style="display:none">
-      <h4 id="checklistTitle">📝 Stroke Symptom Checklist</h4>
-      <form id="checklistForm">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="symptom" value="face" id="face">
-          <label class="form-check-label" for="face" data-key="face">Facial droop</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="symptom" value="arm" id="arm">
-          <label class="form-check-label" for="arm" data-key="arm">Arm weakness</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="symptom" value="speech" id="speech">
-          <label class="form-check-label" for="speech" data-key="speech">Slurred speech</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="symptom" value="vision" id="vision">
-          <label class="form-check-label" for="vision" data-key="vision">Vision changes</label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="symptom" value="time" id="time">
-          <label class="form-check-label" for="time" data-key="time">Sudden onset</label>
-        </div>
-        <button type="button" class="btn btn-primary mt-3" onclick="evaluateChecklist()">Submit</button>
-        <button type="button" class="btn btn-secondary mt-3 ms-2" onclick="speakChecklist()">🔊 Speak Symptoms</button>
-      </form>
-    </div>
-
-    <div id="scanSection" class="card p-4 mt-4" style="display:none">
-      <h4>👁️ Pupil Symmetry Scan</h4>
-      <p>This step uses your phone's camera to check for unequal pupils (anisocoria).</p>
-      <button class="btn btn-warning" onclick="alert('Simulated scan result: Pupils symmetric')">Run Pupil Scan</button>
-    </div>
-
-    <div id="mapSection" class="card p-4 mt-4" style="display:none">
-      <h4>📍 Nearest Stroke Center</h4>
-      <p>We are using your location to find the nearest CT-capable hospital.</p>
-      <div class="bg-light p-3 text-center">[Map Placeholder]</div>
-      <button class="btn btn-success mt-2" onclick="alert('Referral note generated.')">Generate Referral Note</button>
-    </div>
-
-    <div id="educationSection" class="card p-4 mt-4" style="display:none">
-      <h4>🚨 Next Steps (Qué hacer ahora)</h4>
-      <ul>
-        <li>Do NOT drive. Use mototaxi or ambulance if possible.</li>
-        <li>Lay patient flat unless vomiting. Monitor consciousness.</li>
-        <li>Notify nearest health post. Provide name, symptoms, time.</li>
-        <li>Bring ID, medications, and emergency contact info.</li>
-        <li>Use local language tools if needed.</li>
-        <li>Document changes. Take photos or videos if safe.</li>
-      </ul>
-    </div>
+  <div class="hero-section">
+    <h1>Welcome to CráneoClave</h1>
+    <p class="lead">Multilingual stroke triage. Faster care. Better outcomes.</p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="main-content">
+    <p class="text-muted">Selected language: <span id="currentLanguage">English</span></p>
+    <p>Use the navigation bar to begin triage, review stroke education, or check response timing.</p>
+  </div>
+
   <script>
-    let timerSeconds = 0;
-    let language = "en";
-
-    const translations = {
-      en: {
-        title: "CráneoClave – NeuroPass",
-        subtitle: "AI-Guided Stroke Triage & Referral Tool",
-        checklistTitle: "Stroke Symptom Checklist",
-        face: "Facial droop",
-        arm: "Arm weakness",
-        speech: "Slurred speech",
-        vision: "Vision changes",
-        time: "Sudden onset"
-      },
-      es: {
-        title: "CráneoClave – NeuroPass",
-        subtitle: "Herramienta de Triaje de ACV con IA",
-        checklistTitle: "Lista de Síntomas de ACV",
-        face: "Parálisis facial",
-        arm: "Debilidad en el brazo",
-        speech: "Habla arrastrada",
-        vision: "Cambios en la visión",
-        time: "Inicio repentino"
-      }
-    };
-
-    function startTimer() {
-      setInterval(() => {
-        timerSeconds++;
-        const mins = String(Math.floor(timerSeconds / 60)).padStart(2, '0');
-        const secs = String(timerSeconds % 60).padStart(2, '0');
-        document.getElementById("timer").textContent = `Timer: ${mins}:${secs}`;
-      }, 1000);
-    }
-
-    function switchLanguage() {
-      language = document.getElementById("languageSelect").value;
-      const t = translations[language] || translations.en;
-      document.title = t.title;
-      document.getElementById("checklistSection").style.display = "block";
-      document.getElementById("checklistTitle").textContent = t.checklistTitle;
-      document.querySelectorAll('[data-key]').forEach(el => {
-        el.textContent = t[el.dataset.key];
-      });
-    }
-
-    function speakChecklist() {
-      const synth = window.speechSynthesis;
-      const checklistItems = document.querySelectorAll('[data-key]');
-      let text = [...checklistItems].map(el => el.textContent).join(", ");
-      const utter = new SpeechSynthesisUtterance(text);
-      utter.lang = language;
-      synth.speak(utter);
-    }
-
-    function evaluateChecklist() {
-      const symptoms = document.querySelectorAll('input[name="symptom"]:checked');
-      if (symptoms.length >= 3) {
-        alert("Stroke likely. Proceed to pupil scan.");
-        document.getElementById("checklistSection").style.display = "none";
-        document.getElementById("scanSection").style.display = "block";
-        document.getElementById("mapSection").style.display = "block";
-        document.getElementById("educationSection").style.display = "block";
-      } else {
-        alert("Symptoms may not meet stroke threshold. Continue monitoring.");
-      }
+    function setLanguage() {
+      const langSelect = document.getElementById("languageSelect");
+      const selectedText = langSelect.options[langSelect.selectedIndex].text;
+      document.getElementById("currentLanguage").textContent = selectedText;
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
